# ml-final-project-sose26-v2

./: .gitignore  README.md  pyproject.toml
configs/multiple/: boosted-tree-v1.toml  mlp-v1-batch-sizes.toml  mlp-v1-learning-rates.toml  mlp-v2-batch-sizes.toml  mlp-v2-learning-rates.toml  random-forest-v1.toml
configs/single/: boosted-tree-v1.toml  linear-model.toml  mlp-v1.toml  mlp-v2.toml  random-forest-v1.toml
data/processed/: legacy.csv  structural-v1.csv
legacy_notebooks/: City-Center-Linear-Regression-Model.ipynb  Data-Cleaning.ipynb  Data-Visualization.ipynb
notebooks/: 01-Inspecting-Data.ipynb  02-First-Models.ipynb  03-Exploring-Features.ipynb  04-new-models.ipynb  05-Trees.ipynb  MLP.ipynb
scripts/: download_data.py
src/ml_final_project_sose26_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/team_project/: __init__.py
src/team_project/data/: __init__.py  feature_construction.py  loading.py  preprocessing.py  summaries.py
src/team_project/evalutation/: metrics.py
src/team_project/helper/: __init__.py  factory.py  parsing.py
src/team_project/models/: mlp.py
src/team_project/pipelines/: __init__.py  build-dataset.py  build-legacy-dataset.py  cross-metrics-baselines.py  cross-val-train-mlp-multi.py  cross-val-train-mlp.py  cross-val-tree-multiple.py  full-train-test-baselines.py  full-train-test-mlp.py  full-train-test-tree.py  linear-baseline-mlp.py  mean-baseline-mlp.py  train-mlp.py  train-pytorch.py  train-val-mlp-multiple.py  train-val-mlp-single.py
tests/: README.md  test_dependency_install.py  test_package_imports.py
(+86 files in other folders)
