[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ml-final-project-sose26-v2"
version = "0.1.0"
description = "Scaffold for the machine learning final project."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "joblib",
  "torch",
  "jupyter",
  "ipykernel>=7.3.0",
  "matplotlib",
  "seaborn",
  "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = ["legacy_notebooks"]
